is_owner field removed

--- a/config/.env
+++ b/config/.env
@@ -4,3 +4,5 @@ DBPASSWORD=
 DBHOST=localhost
 DBPORT=5432
 SECRET_KEY=88zr=nsjrunk+uha&8@hvo51wq4y*s$vk(rdroa@1k7f4b74jx
+EMAIL_USER_NAME=shahzaibrocks9@gmail.com
+EMAIL_HOST_PASSWORD=aazowbsrtcrqdaja
